--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,19 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: .
+      dockerfile: ./docker/react/Dockerfile
+    volumes:
+      - ./frontend:/app
+      - frontend_node_modules:/app/node_modules
+      - frontend_yarn:/app/.yarn
+    ports:
+      - "5151:3000"
+    depends_on:
+      - backend
+
   db:
     image: mysql:8.0
     environment:
@@ -25,3 +38,5 @@ services:
 
 volumes:
   python_app_data:
+  frontend_node_modules:
+  frontend_yarn:
