fix: requirements.txtの修正

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
-Flask==3.0.3
-Flask-Cors==4.0.1
-python-dotenv==1.0.1
-PyMySql==1.1.1
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
-Flask-Marshmallow==1.2.1
-marshmallow-sqlalchemy==1.0.0
+Flask
+Flask-Cors
+python-dotenv
+PyMySql
+Flask-SQLAlchemy
+Flask-Migrate
+Flask-Marshmallow
+marshmallow-sqlalchemy
+cryptography
