--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,9 @@
   "name": "web",
   "version": "0.1.0",
   "dependencies": {
-    "@apollo/client": "^3.9.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
-    "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/typescript": "^4.0.6",
-    "@graphql-codegen/typescript-operations": "^4.2.0",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/x-date-pickers": "^6.19.6",
@@ -20,14 +15,12 @@
     "@types/node": "^16.18.86",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
-    "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-apollo": "^3.1.5",
-    "react-apollo-hooks": "^0.5.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
@@ -59,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
