.envのサンプルの修正

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
+DATABASE_URL=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_ROOT_PASSWORD=
+EXPOSE_APP_PORT=
 EXPOSE_DATABASE_PORT=
+FLASK_ENV=
