--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,29 @@
 services:
-  backend:
+  app:
     build:
       context: .
-      dockerfile: ./docker/flask/Dockerfile
+      dockerfile: ./docker/Dockerfile
     volumes:
       - ./backend:/backend
     ports:
-      - "5555:8080"
+      - "${EXPOSE_APP_PORT}:8080"
     environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=mysql://user:password@db/mydatabase
+      - FLASK_ENV=${FLASK_ENV}
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
-
-  frontend:
-    build:
-      context: .
-      dockerfile: ./docker/react/Dockerfile
-    volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
-      - frontend_yarn:/app/.yarn
-    ports:
-      - "5151:3000"
-    depends_on:
-      - backend
 
   db:
     image: mysql:8.0
     ports:
-      - "3336:3306"
+      - "${EXPOSE_DATABASE_PORT}:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword
-      - MYSQL_DATABASE=mydatabase
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
+      - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${DATABASE_NAME}
+      - MYSQL_USER=${DATABASE_USER}
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
     volumes:
       - python_app_data:/var/lib/mysql
 
 volumes:
   python_app_data:
-  frontend_node_modules:
-  frontend_yarn:
