--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: ./docker/Dockerfile
     volumes:
       - ./backend:/backend
+    networks:
+      - python-app-backend-network
     ports:
       - "${EXPOSE_APP_PORT}:8080"
     environment:
@@ -15,6 +17,8 @@ services:
 
   db:
     image: mysql:8.0
+    networks:
+      - python-app-backend-network
     ports:
       - "${EXPOSE_DATABASE_PORT}:3306"
     environment:
@@ -23,7 +27,14 @@ services:
       - MYSQL_USER=${DATABASE_USER}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
     volumes:
-      - python_app_data:/var/lib/mysql
+      - python-app-backend-data:/var/lib/mysql
+
+networks:
+  python-app-backend-network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.33.3.0/24
 
 volumes:
-  python_app_data:
+  python-app-backend-data:
